# VX-Base-V2.

./: CMakeLists.txt  README.md
src/: Common.hpp  SelfFeatures.h  dllmain.cpp
src/D3D/: D3DRenderer.cpp  D3DRenderer.hpp
src/File/: file.cpp  file.hpp  file_manager.cpp  file_manager.hpp  folder.cpp  folder.hpp
src/GTA/: CrossMap.cpp  Crossmap.hpp  Invoker.cpp  Invoker.hpp  Memory.hpp  Natives.hpp
src/GTA/memory/: memoryEdit.cpp  memoryEdit.hpp
src/Hook/: Hooking.cpp  Hooking.hpp  NativeHook.cpp  NativeHook.hpp  VMTHook.hpp
src/Script/: Script.hpp
src/Script/callback/: ScriptCallback.cpp  ScriptCallback.hpp
src/Script/globals/: ScriptGlobal.hpp
src/Script/hook/: ScriptHook.cpp  ScriptHook.hpp
src/Script/manager/: ScriptManager.cpp  ScriptManager.hpp
src/UI/: AbstractOption.hpp  AbstractSubmenu.hpp  BaseOption.hpp  BaseSubmenu.hpp  BoolOption.hpp  ChooseOption.hpp  NumberOption.hpp  PlayerSubmenu.hpp  RegularOption.hpp  RegularSubmenu.hpp  SubOption.hpp  TextBox.hpp  UIManager.cpp  UIManager.hpp
src/UI/YTD/: YTDLoader.cpp  YTDLoader.hpp
src/UI/components/: Desc.cpp  Desc.hpp  Footer.cpp  Footer.hpp  header.cpp  header.hpp  option.cpp  option.hpp  subbar.cpp  subbar.hpp
src/UI/drawers/: DrawersHelper.hpp
src/log/: log.cpp  log.hpp
src/memory/: pattern_batch.cpp
src/menu/: main_menu.cpp  main_menu.hpp  submenu.h
src/menu/submenu/: network.cpp  network.hpp  self.cpp  self.hpp  settings.cpp  settings.hpp
src/pointers/: gtapointers.cpp  gtapointers.hpp  pointers.cpp  pointers.hpp
src/utility/: Lists.hpp  LogGames.cpp  LogGames.hpp  Settings.h  Settings.hpp  Timer.hpp  Types.hpp  Util.hpp
src/utility/glt/: CustomText.cpp  CustomText.hpp
(+6 files in other folders)
